fix every overflow problem (html +css)

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ H4{
 .image{
     margin-top: 20px;
     background-image: url("../img/banner.jpg");
-    height: 650px;
+    height: auto;
     background-position: center;
     background-size: cover;
     border-radius: 10px;
@@ -69,14 +69,8 @@ H4{
 
 .opacity{
     background-color: rgba(0, 0, 0, 0.25);
-    height: 650px;
-}
-
-#jumbo-text{ 
-    padding-top: 450px;
-    padding-left: 50px;
+    padding: 30% 50% 10% 10%;
     color: white;
-    width: 50%;
 }
 
 #second-header{
@@ -94,7 +88,6 @@ H4{
 
 .columns{
     margin-top: 20px;
-    overflow: hidden;
 }
 
 .column-opacity{
@@ -104,14 +97,12 @@ H4{
 }
 
 .col.col-left{
-    height: 330px;
     width: 20%;
-    padding-right: 10px;
 }
 
 #img-1{
     width: 100%;
-    height: 50%;
+    height: 200px;
     background-image: url("../img/img-1.jpg");
     background-size: cover;
     background-position: center;
@@ -120,13 +111,13 @@ H4{
 }
 
 .col.col-middle{
-    height: 330px;
     width: 60%;
+    padding: 0px 20px;
 }
 
 #img-2{
     width: 100%;
-    height: 50%;
+    height: 200px;
     background-image: url("../img/banner-2.jpg");
     background-size: cover;
     background-position: center;
@@ -135,14 +126,12 @@ H4{
 }
 
 .col.col-right{
-    height: 330px;
     width: 20%;
-    padding-left: 10px;
 }
 
 #img-3{
     width: 100%;
-    height: 50%;
+    height: 200px;
     background-image: url("../img/img-3.jpg");
     background-size: cover;
     background-position: center;
